--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ services:
   database:
     image: postgres:alpine
     container_name: database
+    ports:
+    - "5432:5432"
     environment:
       POSTGRES_DB: carna-database
       POSTGRES_USER: carna
@@ -12,6 +14,8 @@ services:
     build:
       context: backend
       dockerfile: Dockerfile
+    ports:
+    - "5000:5000"
     depends_on:
       - database
     environment:
