--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,10 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "format": "prettier --write . && eslint --fix .",
+    "start": "yarn format && cross-env NODE_OPTIONS=--openssl-legacy-provider craco start",
+    "prebuild": "prettier --write . && eslint --fix .",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
@@ -61,9 +63,11 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9",
+    "cross-env": "^7.0.3",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^7",
+    "postcss-safe-parser": "5.0.2",
     "prettier": "^2.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
